src/test/deca/context/invalid/resultats/test_class_definition-cont.res
./src/test/deca/context/invalid/test_class_definition.deca:24:0: The class  A is already defined 
